move hardcoded values to app.js

--- a/static/index.html
+++ b/static/index.html
@@ -126,14 +126,14 @@ input {
 <pre>
 dependencies {
     // Google Play Services
-    compile 'com.google.android.gms:play-services:4.0.30'
+    compile 'com.google.android.gms:play-services:<span class="gmsversion"></span>'
 
     // Support Libraries
-    compile 'com.android.support:support-v4:19.0.0'
-    compile 'com.android.support:appcompat-v7:19.0.0'
-    compile 'com.android.support:gridlayout-v7:19.0.0'
-    compile 'com.android.support:support-v7-mediarouter:19.0.0'
-    compile 'com.android.support:support-v13:19.0.0'
+    compile 'com.android.support:support-v4:<span class="frameworkversion"></span>'
+    compile 'com.android.support:appcompat-v7:<span class="frameworkversion"></span>'
+    compile 'com.android.support:gridlayout-v7:<span class="frameworkversion"></span>'
+    compile 'com.android.support:mediarouter-v7:<span class="frameworkversion"></span>'
+    compile 'com.android.support:support-v13:<span class="frameworkversion"></span>'
 
     // Note: these libraries require the "Google Repository" and "Android Repository"
     //       to be installed via the SDK manager.
