--- a/static/iframe.html
+++ b/static/iframe.html
@@ -5,10 +5,6 @@ html, body, pre {
   padding: 0;
   margin: 0;
 }
-body {
-	text-align: center;
-  margin: 10px;
-}
 a:link, a:visited {
   font-family: Roboto, sans-serif;
 	color: #999;
@@ -38,7 +34,6 @@ a:link, a:visited {
 	max-width: 45em;
 	color: #444;
 	margin: 0 auto;
-	text-align: left;
 	font-family: Roboto, sans-serif;
 	font-weight: 400;
 	font-size: 14px;
@@ -58,7 +53,7 @@ dependencies {
     compile '<span>...</span>'
 }
 </pre>
-<a id="powered" href="http://gradleplease.appspot.com">Powered by Gradle, please</a>
+<a id="powered" target="_blank" href="http://gradleplease.appspot.com">Powered by Gradle, please</a>
 </div>
 
 <script src="//www.google.com/js/gweb/analytics/autotrack.js"></script>
