Add more popular queries and fix some overrides.

--- a/static/index.html
+++ b/static/index.html
@@ -160,18 +160,23 @@ dependencies {
 
 <h2>Popular</h2>
 <ul id="popular">
-	<li>gson</li>
-	<li>actionbarsherlock</li>
-	<li>joda-time</li>
 	<li>picasso</li>
-	<li>otto</li>
-	<li>slf4j</li>
-	<li>crouton</li>
-	<li>nineoldandroids</li>
-	<li>butterknife</li>
-	<li>guava</li>
+	<li>gson</li>
 	<li>okhttp</li>
+	<li>actionbarsherlock</li>
+	<li>butterknife</li>
 	<li>dagger</li>
+	<li>guava</li>
+	<li>retrofit</li>
+	<li>nineoldandroids</li>
+	<li>joda-time</li>
+	<li>smoothprogressbar</li>
+	<li>otto</li>
+	<li>crouton</li>
+	<li>facebook</li>
+	<li>actionbarpulltorefresh</li>
+	<li>espresso</li>
+	<li>slf4j</li>
 </ul>
 
 <h2>Where do the results come from?</h2>
