--- a/appengine/static/index.html
+++ b/appengine/static/index.html
@@ -126,19 +126,19 @@ input {
 <pre>
 dependencies {
     // Google Play Services
-    compile 'com.google.android.gms:play-services:<span class="gmsversion"></span>'
+    compile 'com.google.android.gms:play-services:<span class="gmsversion">+</span>'
 
     // Support Libraries
-    compile 'com.android.support:appcompat-v7:<span class="frameworkversion"></span>'
-    compile 'com.android.support:cardview-v7:<span class="frameworkversion"></span>'
-    compile 'com.android.support:gridlayout-v7:<span class="frameworkversion"></span>'
-    compile 'com.android.support:leanback-v17:<span class="frameworkversion"></span>'
-    compile 'com.android.support:mediarouter-v7:<span class="frameworkversion"></span>'
-    compile 'com.android.support:palette-v7:<span class="frameworkversion"></span>'
-    compile 'com.android.support:recyclerview-v7:<span class="frameworkversion"></span>'
-    compile 'com.android.support:support-annotations:<span class="frameworkversion"></span>'
-    compile 'com.android.support:support-v13:<span class="frameworkversion"></span>'
-    compile 'com.android.support:support-v4:<span class="frameworkversion"></span>'
+    compile 'com.android.support:appcompat-v7:<span class="frameworkversion">+</span>'
+    compile 'com.android.support:cardview-v7:<span class="frameworkversion">+</span>'
+    compile 'com.android.support:gridlayout-v7:<span class="frameworkversion">+</span>'
+    compile 'com.android.support:leanback-v17:<span class="frameworkversion">+</span>'
+    compile 'com.android.support:mediarouter-v7:<span class="frameworkversion">+</span>'
+    compile 'com.android.support:palette-v7:<span class="frameworkversion">+</span>'
+    compile 'com.android.support:recyclerview-v7:<span class="frameworkversion">+</span>'
+    compile 'com.android.support:support-annotations:<span class="frameworkversion">+</span>'
+    compile 'com.android.support:support-v13:<span class="frameworkversion">+</span>'
+    compile 'com.android.support:support-v4:<span class="frameworkversion">+</span>'
 
     // Note: these libraries require the "Google Repository" and "Android Repository"
     //       to be installed via the SDK manager.
