--- a/appengine/static/index.html
+++ b/appengine/static/index.html
@@ -131,6 +131,7 @@ dependencies {
     // Support Libraries
     compile 'com.android.support:appcompat-v7:<span class="frameworkversion">+</span>'
     compile 'com.android.support:cardview-v7:<span class="frameworkversion">+</span>'
+    compile 'com.android.support:design:<span class="frameworkversion">+</span>'
     compile 'com.android.support:gridlayout-v7:<span class="frameworkversion">+</span>'
     compile 'com.android.support:leanback-v17:<span class="frameworkversion">+</span>'
     compile 'com.android.support:mediarouter-v7:<span class="frameworkversion">+</span>'
