--- a/appengine/static/index.html
+++ b/appengine/static/index.html
@@ -164,6 +164,7 @@ dependencies {
 	<li>picasso</li>
 	<li>gson</li>
 	<li>okhttp</li>
+	<li>okhttp3</li>
 	<li>actionbarsherlock</li>
 	<li>butterknife</li>
 	<li>dagger</li>
