Don't use static/app.js, it's stale.

--- a/appengine/static/iframe.html
+++ b/appengine/static/iframe.html
@@ -63,7 +63,7 @@ analytics = new gweb.analytics.AutoTrack({
 });
 </script>
 
-<script src="/static/app.js"></script>
+<script src="/app.js"></script>
 
 <script type="text/javascript">
   (function() {
