Update author URL

--- a/appengine/static/index.html
+++ b/appengine/static/index.html
@@ -185,7 +185,7 @@ dependencies {
 <p class="content">Maven Central. To have your library listed here (and have people include your library easily), upload your project to <a href="http://search.maven.org/">Maven Central</a>. The easiest way to do this is via <a href="https://docs.sonatype.org/display/Repository/Sonatype+OSS+Maven+Repository+Usage+Guide">Sonatype</a>.</p>
 
 <p class="attrib">Portions of this page are reproduced from work created and <a href="http://code.google.com/policies.html">shared by the Android Open Source Project</a> and used according to terms described in the <a href="http://creativecommons.org/licenses/by/2.5/">Creative Commons 2.5 Attribution License</a>.</p>
-<p class="attrib" id="author">by <a href="http://google.com/+ChristopherBroadfoot">Chris Broadfoot <img src="https://lh6.googleusercontent.com/-eH_xCqel-9w/AAAAAAAAAAI/AAAAAAAAKZw/xa0bi10dKXA/photo.jpg?sz=50"></a></p>
+<p class="attrib" id="author">by <a href="https://chrisbroadfoot.id.au/">Chris Broadfoot <img src="https://lh6.googleusercontent.com/-eH_xCqel-9w/AAAAAAAAAAI/AAAAAAAAKZw/xa0bi10dKXA/photo.jpg?sz=50"></a></p>
 </div>
 
 <script src="//www.google.com/js/gweb/analytics/autotrack.js"></script>
