Updated compile for Android Gradle plugin 3
As of v3 of the Gradle plugin compile is now implementation

--- a/appengine/static/iframe.html
+++ b/appengine/static/iframe.html
@@ -50,7 +50,7 @@ pre {
 <div id="main">
 <pre id="suggestion">
 dependencies {
-    compile '<span>...</span>'
+    implementation '<span>...</span>'
 }
 </pre>
 <a id="powered" target="_blank" href="http://gradleplease.appspot.com">Powered by Gradle, please</a>
